istio-resources/ingress.yaml
# 참고: https://dewble.tistory.com/entry/configuring-istio-ingressgateway-with-aws-alb
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketaka-ingress
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:961341524048:certificate/42a1ca09-abae-4691-9c98-4ffe410bfb24
    alb.ingress.kubernetes.io/controller: "true"
    alb.ingress.kubernetes.io/group.name: front-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: hotsun.store
    # 헬스체크 추가
    # alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    # alb.ingress.kubernetes.io/healthcheck-path: /healthz
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    # alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    # alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
